--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#F7F7F7</color>
+    <color name="medium_gray">#646B76</color>
+    <color name="gray">#F3F4F5</color>
     <color name="light_blue">#6F98D7</color>
 </resources>
